# rust-ctf

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 20260214124500_init_core_schema.sql  20260215153000_add_audit_logs.sql  20260215193000_add_team_invitations.sql  20260215204000_enhance_challenge_management.sql  20260215213000_add_challenge_status.sql  20260215223000_add_contest_announcements_and_dynamic_scoring.sql  20260215233000_add_runtime_alerts.sql  20260218090000_add_contest_poster_fields.sql  20260219190000_add_auth_email_verification_and_password_reset.sql  20260219194000_add_site_settings.sql  20260220001000_add_challenge_categories_and_blood_bonus.sql  20260220090000_add_builtin_pwn_category.sql  20260221093000_add_challenge_attachment_max_bytes_to_site_settings.sql  20260221162000_add_contest_registrations_and_time_mode_and_challenge_hints.sql
backend/scripts/m5/: full_acceptance.sh  load_benchmark.sh  security_smoke.sh
backend/scripts/runtime/: challenge_template_lint.sh  heartbeat_reporter.sh  runtime_full_regression.sh  scoreboard_ws_smoke.mjs  single_image_smoke.sh  wireguard_smoke.sh
backend/scripts/verifiers/: simple_compare.sh
backend/src/: auth.rs  config.rs  error.rs  mailer.rs  main.rs  password_policy.rs  runtime_template.rs  state.rs
backend/src/routes/: admin.rs  auth.rs  contest_access.rs  contests.rs  health.rs  instances.rs  mod.rs  scoreboard.rs  site.rs  submissions.rs  teams.rs
deploy/: docker-compose.dev.yml
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  (+4 more)
(+48 files in other folders)
